--- a/wordpress/manifest/mysql-deployment.yaml
+++ b/wordpress/manifest/mysql-deployment.yaml
@@ -23,9 +23,9 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi
+      storage: 2Gi
 ---
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: wordpress-mysql
@@ -49,10 +49,7 @@ spec:
         name: mysql
         env:
         - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-pass
-              key: password
+          value: "admin"
         ports:
         - containerPort: 3306
           name: mysql
