--- a/wordpress/manifest/wordpress-deployment.yaml
+++ b/wordpress/manifest/wordpress-deployment.yaml
@@ -6,9 +6,7 @@ metadata:
     app: wordpress
 spec:
   ports:
-    - protocol: TCP
-      port: 8081
-      targetPort: 80
+    - port: 80
   selector:
     app: wordpress
     tier: frontend
@@ -25,7 +23,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 20Gi
+      storage: 2Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -47,16 +45,17 @@ spec:
         tier: frontend
     spec:
       containers:
-      - image: wordpress:4.8-apache
+      - image: wordpress:5.7-apache
         name: wordpress
         env:
         - name: WORDPRESS_DB_HOST
-          value: wordpress-mysql
+          value: "10.42.0.84"
+        - name: WORDPRESS_DB_USER
+          value: root
+        - name: WORDPRESS_DEBUG
+          value: "1"
         - name: WORDPRESS_DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-pass
-              key: password
+          value: "admin"
         ports:
         - containerPort: 80
           name: wordpress
